# mc-server

./: .cursorignore  .cursorindexingignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  config.yml  coverage.xml  minecraft-server.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.specstory/history/: 2025-03-09_18-42-automating-minecraft-server-deployment-with-terraform.md  2025-03-09_20-30-refactoring-minecraft-server-management-to-soa.md  2025-03-09_21-26-codebase-review-and-cleanup-tasks.md  2025-03-09_22-09-enhancing-server-status-command.md  2025-03-09_22-36-running-tests-and-ruff-checks.md  2025-03-10_09-15-config-review-and-cursor-file-updates.md
docker/: minecraft-server.sh  test_docker_server.sh
docs/: api-reference.md  architecture.md  aws-deployment.md  contributing.md  docker-deployment.md  mods-and-plugins.md  server-configuration.md  server-flavors.md  troubleshooting.md
examples/: advanced_server_management.py
kubernetes/: deploy-k8s.sh  minecraft-deployment.yml
src/: __init__.py  minecraft_server_manager.py
src/commands/: __init__.py  server_commands.py
src/core/: __init__.py  base_server.py  server_factory.py  server_interface.py
src/implementations/: __init__.py  aws_server.py  docker_server.py
src/utils/: __init__.py  auto_shutdown.py  command_executor.py  config.py  console.py  file_manager.py  mod_manager.py  monitoring.py
terraform/: README.md
terraform/aws/environments/dev/: main.tf  outputs.tf  variables.tf
terraform/aws/modules/minecraft_server/: main.tf  outputs.tf  variables.tf
terraform/aws/modules/minecraft_server/test/: minecraft_server_test.tf
tests/: __init__.py  test_main.py  test_server_interface.py
tests/commands/: test_command_registry.py  test_server_commands.py
tests/utils/: test_auto_shutdown.py  test_config.py
